@@ -1,3 +1,14 @@
+2010-10-21  Anders Carlsson  <andersca@apple.com>
+
+        Reviewed by David Hyatt.
+
+        Always clear the selection when the find string isn't found
+        https://bugs.webkit.org/show_bug.cgi?id=48087
+        <rdar://problem/8564640>
+
+        * WebProcess/WebPage/FindController.cpp:
+        (WebKit::FindController::findString):
+
 2010-10-21  Alexey Proskuryakov  <ap@apple.com>
 
         Reviewed by John Sullivan.
